_mocha/ireland/unicorn/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  unicorn
  namespace: app
  labels:
    app:  unicorn
spec:
  selector:
    matchLabels:
      app: unicorn
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  unicorn
    spec:
      serviceAccountName: unicorn
      containers:
      - name:  unicorn
        image: 518286664249.dkr.ecr.us-east-1.amazonaws.com/unicorn:v1 
        lifecycle:
          preStop:
            exec:
              command: ["sleep", "5"]
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 1
            memory: 1024Mi
        livenessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - |
                curl -f http://localhost/healthz || exit 1
          initialDelaySeconds: 5
          timeoutSeconds: 30
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - |
                curl -f http://localhost/healthz || exit 1
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: 8080
          name:  unicorn
        volumeMounts:
        - name: cache
          mountPath: /mnt/efs
          
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: efs-claim
          
      restartPolicy: Always
