_mocha/ireland/unicorn/service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-port: "80"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=60
  name: unicorn
  namespace: app
spec:
  selector:
    app: unicorn
  type: ClusterIP
  ports:
  - name: unicorn
    protocol: TCP
    port: 80
    targetPort: 80
